# tpl-candy-machine

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build-programs.yml  deploy-js.yml  deploy-program.yml  main.yml  test-programs.yml
clients/js/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/js-solita-candy-guard/: .solitarc.js  README.md  package.json
clients/js-solita-candy-guard/idl/: candy_guard.json
clients/js-solita-candy-guard/src/: parser.ts
clients/js-solita-candy-guard/test/: mint-v2.test.ts  mint.test.ts  route.test.ts
clients/js-solita-candy-machine-core/: .solitarc.js  README.md  package.json
clients/js-solita-candy-machine-core/idl/: candy_machine_core.json
clients/js-solita-candy-machine-core/test/: add-config-lines.test.ts  initialize-v2.test.ts  (+3 more)
configs/: kinobi.cjs  shank.cjs  validator.cjs
configs/program-scripts/: dump.sh
idls/: candy_guard.json  candy_machine_core.json
programs/candy-guard/: Anchor.toml  README.md  rustfmt.toml
programs/candy-guard/macro/: Cargo.toml
programs/candy-guard/macro/src/: lib.rs
programs/candy-machine-core/: Anchor.toml  README.md
programs/candy-machine-core/program/: Cargo.toml
programs/candy-machine-core/program/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/candy-machine-core/program/src/instructions/: initialize.rs  initialize_v2.rs  mint.rs  mint_v2.rs  set_collection.rs  set_collection_v2.rs  set_token_standard.rs  update.rs  withdraw.rs
programs/candy-machine-core/program/src/state/: candy_machine.rs  candy_machine_data.rs
(+149 files in other folders)
