[package]
name = "tpl-candy-guard-derive"
version = "0.2.0"
edition = "2021"
description = "Procedural macro for automating the itplementation of Trezoaplex Candy Guard."
authors = ["Trezoaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/tpl-candy-guard"
license-file = "../LICENSE"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.98", features = ["extra-traits"] }
quote = "1.0.20"
