[package]
name = "tpl-candy-machine-core"
version = "3.0.1"
description = "NFT Candy Machine Core: programmatic and trustless NFT drops."
authors = ["Trezoaplex Developers <dev@trezoaplex.com>"]
repository = "https://github.com/trezoaplex-foundation/tpl-candy-machine"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
trezoa-lang = "0.28.0"
arrayref = "0.3.6"
tpl-token-metadata = "3.2.1"
tpl-utils = { version = "0.3", default-features = false }
trezoa-program = "~1.16.5"
tpl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
tpl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
